--- a/lipitwist/css/style.css
+++ b/lipitwist/css/style.css
@@ -5,39 +5,49 @@ html,body{
 }
 
 .container{
-    display : flex;
-    flex-direction : column;
-    height : 100%;
-    width : 90%; 
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    background-size: 12vh;
+    background-position: 50% 90%;
+    background-repeat: no-repeat;
+    background-image: url('../assets/bgMain.png');
 }
 
 .header {
+    
     height: 8vh;
     text-align: center;
     font-size: 6vmin;
     font-family: 'Khand',monospace;
     width: 100vw;
     color: #ffffff;
-    background: url('../assets/srivatsa.png'),linear-gradient(135deg,white 50%,#383838 50%);
-    background-size: 6vh,100% 100%;
-    background-position: 45vw,center;
-    background-repeat : no-repeat;
-    line-height: 8vh;
-    border-bottom: 2px solid black;
+    /* background-image: url('../assets/srivatsa.png'),radial-gradient(circle,transparent 1px,#ffffff6b 2px,transparent 3px),radial-gradient(circle,transparent 1px,#ffffff6b 2px,transparent 3px),linear-gradient(45deg,transparent 30%,white 30.1%,white 70%,transparent 70.1%),linear-gradient(135deg,#3a3a3a 30%,white 30.1%,white 70%,#3a3a3a 70.1%);
+    background-position: 50% 98%,center;
+    background-size: 80px 80px,4px 4px,8px 8px,100% 100%,100% 100%;
+    background-repeat: no-repeat,repeat;*/
+    line-height: 8vh; 
+
+    background-image: url('../assets/srivatsa.png'),linear-gradient(45deg,transparent 45%,white 45.1%,white 55%,transparent 55.1%),linear-gradient(135deg,#3a3a3a 45%,white 45.1%,white 55%,#3a3a3a 55.1%);
+    background-position: 50%,center;
+    background-size: 6vh,100% 100%,100% 100%;
+    background-repeat: no-repeat;
     display : flex;
 }
 
 .header>div{
     width : 50vw;
     text-align : center;
+    color : white;
 }
 
-.lefthead{
-    color : #131313;
+/* .lefthead{
+    color : #3a3a3a;
 }
 .righthead{
     color : white;
-}
+} */
 
 .area{
     margin-top : 2vh;
@@ -90,3 +100,21 @@ html,body{
     outline: none;
 }
 
+.footer{
+    display :flex;
+    width : 80vw;
+    margin : 3vh 10vw 0 10vw;
+    justify-content: space-around;
+}
+
+.footer>div{
+    width: 32vw;
+    font-family: 'Rajdhani',monospace;
+    line-height: 5vh;
+    border: 2px solid black;
+    box-shadow: 4px 5px 0 black;
+    padding-left: 3vw;
+    height: 5vh;
+    font-size: 3.5vmin;
+    text-align: center;
+}
