--- a/lipitwist/css/style.css
+++ b/lipitwist/css/style.css
@@ -10,10 +10,6 @@ html,body{
     flex-direction: column;
     height: 100%;
     width: 100%;
-    background-size: 15vh;
-    background-position: 51% 94%;
-    background-repeat: no-repeat;
-    background-image: url('../assets/bgMain.png');
 }
 
 .header {
@@ -58,6 +54,50 @@ html,body{
     border-width : 4px;
 }
 
+.tablet{
+    display :flex;
+    width : 80vw;
+    margin : 3vh 10vw 0 10vw;
+    justify-content: space-around;
+}
+
+.guide{
+    margin-top: 2vh;
+    width: 90vw;
+    height: 10vh;
+    display: grid;
+    margin-left: 5vw;
+    grid-template-rows: 4vh 4vh;
+    grid-template-columns: repeat(8,1fr);
+    grid-column-gap: 0.5vw;
+    grid-row-gap: 1vh;
+}
+
+.guide>div{
+    text-align: center;
+    font-size: 3.5vmin;
+    line-height: 4.5vh;
+    height: 4.5vh;
+    background: #151515;
+    color: white;
+}
+
+.tabs{
+    width: 20vw;
+    font-family: 'Rajdhani',monospace;
+    line-height: 5vh;
+    border: 2px solid black;
+    box-shadow: 4px 5px 0 black;
+    padding-left: 3vw;
+    height: 5vh;
+    font-size: 3.5vmin;
+    text-align: center;
+}
+
+.tabs:hover{
+    background : #8BC34A;
+}
+
 .chooser{
     margin-right: 30vw;
     outline: none;
@@ -82,6 +122,7 @@ html,body{
     color : black;
     font-family : 'Khand',monospace;
 }
+
 
 .reflection {
     margin-top: 2vh;
@@ -112,4 +153,8 @@ html,body{
     height: 5vh;
     font-size: 3.5vmin;
     text-align: center;
+}
+
+.footer>div:hover{
+    background : #8BC34A;
 }
